// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary component correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $213.42
  </h1>
</div>
`;

exports[`should render ExpensesSummary component correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $21,343,636.42
  </h1>
</div>
`;
